# multi-llm-plugin

./: .gitignore  LICENSE  README.md  TODO.md
skills/multi-llm/: AGENTS.md  SKILL.md  apply_code_fixes_orchestrator.py  apply_suggestions_orchestrator.py  apply_task_suggestions_orchestrator.py  ask_orchestrator.py  check_workflow_prerequisites.py  code_review_orchestrator.py  display_decisions.py  finalize_tracking.py  implement_orchestrator.py  init_config.py  providers.yaml  pyproject.toml  review_plan_orchestrator.py  review_tasks_orchestrator.py  update_plan_tasks.py
skills/multi-llm/instructions/: apply-code-fixes.md  apply-suggestions.md  apply-task-suggestions.md  ask.md  full-workflow.md  generate-tasks.md  implement.md  init-config.md  review-code.md  review-plan.md  review-tasks.md
skills/multi-llm/prompts/: ask.txt  code_review.txt  consolidate_suggestions.txt  implementation_task.txt  plan_review.txt  task_review.txt
skills/multi-llm/references/: human-decision-batch.md  resume-detection.md  salvage-handling.md  uv-check.md  wave-batching.md
skills/multi-llm/schemas/: code_review_issues.schema.json  consolidated.schema.json  consolidation_batch.schema.json  state_file.schema.json  task_decomposition.schema.json
skills/multi-llm/templates/: consolidated_report_template.html  pr_report_template.html  report_template.html
skills/multi-llm/tests/: README.md  conftest.py  test_apply_code_fixes_unit.py  test_apply_orchestrator_base.py  test_apply_suggestions_integration.py  test_apply_task_suggestions.py  test_apply_task_suggestions_integration.py  (+71 more)
(+118 files in other folders)
