[project]
name = "multi-llm"
version = "0.1.0"
description = "Multi-LLM automation for plan review, task generation, implementation, and code review"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[dependency-groups]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pytest-xdist>=3.0", "ruff>=0.1.0"]

[tool.pytest.ini_options]
markers = [
    "robustness: marks tests for LLM error handling robustness scenarios",
    "live: marks tests that require Claude Code CLI and API (skipped in CI)",
    "timeout: marks tests with a timeout limit (requires pytest-timeout)",
    "config_override: opts out of the autouse per-project config isolation fixture (tests that exercise override discovery/env themselves)",
]
# Filter out warnings about dataclass fixtures being collected by pytest
filterwarnings = [
    "ignore:cannot collect test class.*FixturePlan.*:pytest.PytestCollectionWarning",
]
